@@ -112,6 +112,7 @@ var
     GM_ATHENA_INT : Byte;
     GM_ATHENA_DEX : Byte;
     GM_ATHENA_LUK : Byte;
+    GM_ATHENA_SPIRITBALL : Byte;
 
 
     GM_Access_DB : TIntList32;
@@ -225,6 +226,7 @@ var
     function command_athena_int(tc : TChara; str : String) : String;
     function command_athena_dex(tc : TChara; str : String) : String;
     function command_athena_luk(tc : TChara; str : String) : String;
+    function command_athena_spiritball(tc : TChara; str : String) : String;
 
 implementation
 
@@ -343,6 +345,7 @@ implementation
         GM_ATHENA_INT := StrToIntDef(sl.Values['ATHENA_INT'], 1);
         GM_ATHENA_DEX := StrToIntDef(sl.Values['ATHENA_DEX'], 1);
         GM_ATHENA_LUK := StrToIntDef(sl.Values['ATHENA_LUK'], 1);
+        GM_ATHENA_SPIRITBALL := StrToIntDef(sl.Values['ATHENA_SPIRITBALL'], 1);
 
         sl.Free;
         ini.Free;
@@ -466,6 +469,7 @@ Called when we're shutting down the server *only*
         ini.WriteString('Athena GM Commands', 'ATHENA_INT', IntToStr(GM_ATHENA_INT));
         ini.WriteString('Athena GM Commands', 'ATHENA_DEX', IntToStr(GM_ATHENA_DEX));
         ini.WriteString('Athena GM Commands', 'ATHENA_LUK', IntToStr(GM_ATHENA_LUK));
+        ini.WriteString('Athena GM Commands', 'ATHENA_SPIRITBALL', IntToStr(GM_ATHENA_SPIRITBALL));
 
         ini.Free;
 
@@ -592,7 +596,8 @@ Called when we're shutting down the server *only*
             else if ( (copy(str, 1, length('vit')) = 'vit') and (check_level(tc.ID, GM_ATHENA_VIT)) ) then error_msg := command_athena_vit(tc, str)
             else if ( (copy(str, 1, length('int')) = 'int') and (check_level(tc.ID, GM_ATHENA_INT)) ) then error_msg := command_athena_int(tc, str)
             else if ( (copy(str, 1, length('dex')) = 'dex') and (check_level(tc.ID, GM_ATHENA_DEX)) ) then error_msg := command_athena_dex(tc, str)
-            else if ( (copy(str, 1, length('lukx')) = 'luk') and (check_level(tc.ID, GM_ATHENA_LUK)) ) then error_msg := command_athena_luk(tc, str)
+            else if ( (copy(str, 1, length('luk')) = 'luk') and (check_level(tc.ID, GM_ATHENA_LUK)) ) then error_msg := command_athena_luk(tc, str)
+            else if ( (copy(str, 1, length('spiritball')) = 'spiritball') and (check_level(tc.ID, GM_ATHENA_SPIRITBALL)) ) then error_msg := command_athena_spiritball(tc, str)
         end else if gmstyle = '/' then begin
         	if ( (aegistype = 'B') and (Copy(str, 1, length(tc.Name) + 2) = (tc.Name + ': ')) and (not (Copy(str, 1, 4) = 'blue') ) and (check_level(tc. ID, GM_AEGIS_B)) ) then error_msg := command_aegis_b(str)
             else if ( (aegistype = 'B') and (Copy(str, 1, length(tc.Name) + 2) <> (tc.Name + ': ')) and (not (Copy(str, 1, 4) = 'blue') ) and (check_level(tc. ID, GM_AEGIS_NB)) ) then error_msg := command_aegis_nb(str)
@@ -4313,6 +4318,24 @@ Called when we're shutting down the server *only*
             else Result := 'GM_ATHENA_LUK Success. ' + IntToStr(oldpoints - tc.ParamBase[5]) + ' points subtracted.'
         end else begin
             Result := Result + 'Point amount out of range [-32767-32767].';
+        end;
+    end;
+
+    function command_athena_spiritball(tc : TChara; str : String) : String;
+    var
+        tm : TMap;
+        i, k : Integer;
+    begin
+        Result := 'GM_ATHENA_SPIRITBALL Failure.';
+
+        tm := tc.MData;
+
+        Val(Copy(str, 12, 256), i, k);
+
+        if (k = 0) and (i >= 1) and (i <= 1000) then begin
+            tc.spiritSpheres := i;
+            UpdateSpiritSpheres(tm, tc, tc.spiritSpheres);
+            Result := 'GM_ATHENA_SPIRITBALL Success.';
         end;
     end;
 end.
