@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 07-10-04: Added @spiritball to ALBGM. [Trihan]
 - 07-10-04: Added @luk to ALBGM. [Trihan]
 - 07-10-04: Added @dex to ALBGM. [Trihan]
 - 07-10-04: Added @int to ALBGM. [Trihan]
